# gen_srt_table

./: CMakeLists.txt  README.md
src/: main.cpp
